--- a/SEMANA 1/HTLM.html
+++ b/SEMANA 1/HTLM.html
@@ -21,6 +21,6 @@
     <HR aling="center" width="88%">
     <font color="red" size="12" face="calibri" > Una ecuacion de tercer grado es:
       <font>A <sup> <font color="blue">3</font></sup>+B</font color="green">2</font></sup>+C
-    
+    <p><font place="jokerman" color="green"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. </font>Ab esse nemo vitae recusandae ea, voluptate nisi dignissimos quae a culpa cupiditate aut quidem, aspernatur sit veniam. Odio, aperiam? Quisquam, cum.</p>
 </body>
 </html>
